--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  height: auto;
+  background-image: url('bgimg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.overlay{
+  opacity:0.7;
+   background-color:#000000;
+   position:fixed;
+   width:100%;
+   height:100%;
+   top:0;
+   left:0;
+   z-index:1000;
+   text-align:center;
+}
+.center-text{
+  color: #FFFFFF;
+  margin-top:20%;
+}
+.colour-text{
+  color: #FFFFFF;
 }
