--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,12 @@ body {
    left:0;
    z-index:1000;
    text-align:center;
+   font-family: 'Helvetica', sans-serif;
 }
 .center-text{
   color: #FFFFFF;
   margin-top:20%;
+
 }
 .colour-text{
   color: #FFFFFF;
