--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,21 @@ background-size: cover;
 .linkBlue{
   color: #2172df;
 }
-.logo-image{
+/* .logo-image{
   margin-top: 20vh;
-  
+   */
+}
+.wrapper
+{
+ width:500px;
+ height:500px;
+ margin:0 auto;
+ 
+ position:absolute;
+ left:50%;
+ top:50%;
+ margin-left:-250px;
+ margin-top:-250px;
 }
 a {
   text-decoration: none; 
